# projects

git-clone-in-python/: gclone.py  libgclone.py  pyproject.toml
git-clone-in-python/lib/: commands.py  gitrepo.py  libgclone.py  utils.py
